[package]
name = "usbiso"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.5.4", features = ["derive"] }
futures-util = "0.3.30"
indicatif = "0.17.8"
reqwest = { version = "0.12.4", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.107"
sha256 = "1.5.0"
tokio = { version = "1", features = ["full"] }
